# 33-2-fishing-game-2

./: CMakeLists.txt  README.md
include/: boot.h  fish.h  fishinggame.h  functions.h
src/: CMakeLists.txt  fishinggame.cpp  main.cpp
